<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AStA Rental</string>
    <string name="hello">Hello!</string>
    <string name="welcome_description">Welcome to the first AStA App!\nHerewith you can easily rent objects for your next event from home. Just sign in and there you go!</string>
    <string name="sign_in">Sign In</string>
    <string name="oder">or</string>
    <string name="rental_title">Rental</string>
    <string name="events_title">Events</string>
    <string name="news_title">News</string>
    <string name="settings_title">Settings</string>
    <string name="admin">Admin</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="no_rental_message">Sorry, couldn\'t find any reservation.</string>
    <string name="new_rental">New Booking</string>
    <string name="new_rental_date_time_description">For which event do you want to make a reservation? Please insert the below-mentioned information.</string>
    <string name="event_name">Event Title</string>
    <string name="pick_up">Pickup</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="return_date_time">Return</string>
    <string name="new_rental_items_description">Chose the items you want to borrow.</string>
    <string name="new_rental_items_quantity_description">Tell us how many items you need.</string>
    <string name="new_rental_overview_description">Please check your input.</string>
    <string name="no_recent_rental">There are no recent reservations.</string>
    <string name="past_title">Past</string>
    <string name="no_past_rental">There are no past reservations.</string>
    <string name="recent_title">Recent</string>
    <string name="rental_date_range_select">Chose reservation period</string>
    <string name="rental_pickup_time_select">Chose pickup time</string>
    <string name="rental_return_time_select">Chose return time</string>
    <string name="deleted">deleted</string>
    <string name="undo">Undo</string>
    <string name="quantity">Quantity</string>
    <string name="booking">Reservation Request</string>
    <string name="notes">Notes</string>
    <string name="add_note">Add note</string>
    <string name="edit">Edit</string>
    <string name="edit_rental">Edit Reservation</string>
    <string name="invalid_input">Please check your input.</string>
    <string name="input_required">Input required</string>
    <string name="rental_items_choice_error">Please chose at least one item.</string>
    <string name="rental_items_quantity_error">Please specify the desired quantity of each item.</string>
    <string name="sign_in_canceled_message">Please finish the sign in process.</string>
    <string name="sign_in_error_message">Sign in failed. Please try again.</string>
</resources>
